src/objects/Product_Option_Descriptor__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_instead_of_NULL__c</fullName>
        <label>Label instead of NULL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Type__c</fullName>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Option Descriptor</label>
    <listViews>
        <fullName>All_Extended</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Is_Required__c</columns>
        <columns>Option_Type__c</columns>
        <columns>Label_instead_of_NULL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Extended)</label>
    </listViews>
    <pluralLabel>Product Option Descriptors</pluralLabel>
</CustomObject>